Design part finished
Section 06 modified

--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -96,7 +96,7 @@
 \include{Chapter03/ProjectPlan}
 \include{Chapter04/Design}
 \include{Chapter06/Implementation}
-\include{Chapter07/Reflection}
+\include{Chapter07/Evaluation}
 \include{Chapter08/FutureWork}
 \include{Chapter09/Conclusion}
 
