--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -22,6 +22,9 @@
 \usepackage{arydshln} % add hash line for tables
 \usepackage{booktabs} % new tables
 
+\usepackage{amsmath}
+\usepackage{mathtools}
+
 \usepackage{xcolor}
 % \newcommand\mytodo[1]{\textcolor{red}{#1}}
 \usepackage{lipsum}
