Implementation part written

--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -21,6 +21,8 @@
 \usepackage{wrapfig} % add picture wraped by text
 \usepackage{arydshln} % add hash line for tables
 \usepackage{booktabs} % new tables
+\usepackage[colorlinks,linkcolor=black]{hyperref}
+
 
 \usepackage{amsmath}
 \usepackage{mathtools}
