--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -102,8 +102,8 @@
 \include{Chapter04/Design}
 \include{Chapter06/Implementation}
 \include{Chapter07/Evaluation}
-\include{Chapter08/FutureWork}
-\include{Chapter09/Conclusion}
+\include{Chapter08/Conclusion}
+\include{Chapter09/FutureWord}
 
 %-----------------------------------------------------------------------------------------
 
