--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -103,7 +103,7 @@
 \include{Chapter06/Implementation}
 \include{Chapter07/Evaluation}
 \include{Chapter08/Conclusion}
-\include{Chapter09/FutureWord}
+\include{Chapter09/FutureWork}
 
 %-----------------------------------------------------------------------------------------
 
