--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -21,12 +21,13 @@
 \usepackage{wrapfig} % add picture wraped by text
 \usepackage{arydshln} % add hash line for tables
 \usepackage{booktabs} % new tables
-\usepackage[colorlinks,linkcolor=black]{hyperref}
-
-
-\usepackage{amsmath}
+%\usepackage[colorlinks,linkcolor=black]{hyperref}
+\usepackage[colorlinks=false, linktocpage=false]{hyperref}
+%{colorlinks=false, linktocpage=true}{hyperref}
+\hypersetup{hidelinks}
+\usepackage[fleqn]{amsmath}
 \usepackage{mathtools}
-
+\usepackage{pdflscape}
 \usepackage{xcolor}
 % \newcommand\mytodo[1]{\textcolor{red}{#1}}
 \usepackage{lipsum}
@@ -37,6 +38,7 @@
 \usepackage{todonotes}
 \usepackage{hyperref}
 \usepackage{glossaries}
+
 \makeglossaries
 
 \usepackage[nottoc]{tocbibind} % add list of figure and tables and put them in content 
@@ -50,6 +52,8 @@
 \textwidth=6.5in
 \textheight=9.0in
 \headsep=0.25in 
+
+
 
 
 \linespread{1.3} % Line spacing
@@ -70,13 +74,13 @@
 
 \maketitle
 \vfill
-\center \date{\normalsize September 2015} % Today's date or a custom date
+\center \date{\normalsize December 2017} % Today's date or a custom date
 \end{titlepage}
 % -----------------------------------------------------------------------------------
 
 \pagenumbering{Roman} 
 \justify
-\include{Dedication/dedication}
+
 \include{Declaration/declaration}
 \include{Acknowledgement/acknowledgement}
 \include{Abstract/abstract}
