--- a/swansea-university-thesis-template-master/Abstract/abstract.tex
+++ b/swansea-university-thesis-template-master/Abstract/abstract.tex
@@ -1,5 +1,6 @@
 % ************************** Thesis Abstract *****************************
 \null\vspace{\fill}
+\renewcommand{\abstractname}{\large Abstract}
 \begin{abstract}
 \vspace{2cm}
 William Shakespeare was one of the greatest writers the world has ever seen. His works have been translated and retranslated many times into many languages. Studying the variations of these translations is important to understand the evolutions for translation, culture, as well as history. A group of researchers in the College of Art and Humanities at Swansea University has a collection of different German translations of Shakespeare's play, \emph{Othello}. They attempt to study the variations of words between different translations, and to find unique words in certain translations. This project aims at creating an interactive visualization system of text data by providing a parallel view to compare varieties of text between translation versions. In addition to this, a software is designed to enable users to interact with the visualization. The data processed in this project contains 15 German translations of \emph{Othello} and a base text in English, collected by Dr. Cheesman from College of Arts and Humanities at Swansea University. Our goal is to provide visualization solutions that assist them to identify and analyse such words and translations. 
