--- a/swansea-university-thesis-template-master/Appendix1/appendix1.tex
+++ b/swansea-university-thesis-template-master/Appendix1/appendix1.tex
@@ -1,1 +1,61 @@
 \section{Minutes of Meeting }
+
+Minutes of Meeting: Bob, Rhodri, Xiaoxiao, Carlo, Mohammed
+
+-----------------------------------------------------------
+
+Date:       1 December 2017
+
+Start time: 15:00
+
+End time:   16:00
+
+Date and time of next meeting: Friday, 8 December 2017, 15:00 (Last "Official" meeting)
+
+Topics discussed: 
+
+-- Das Institut für Deutsche Sprache--Corpus-Based Lemma and Word Form Lists(http://www1.ids-mannheim.de/direktion/kl/projekte/methoden/derewo.html?L=1)
+
+-- Gregynog Presentation
+
+-- Meng initial document
+
+Progress:
+
+--  3rd year project initial document feedback
+
+--  Carlo: Implements recursive web crawler in python
+
+--  Carlo: Started sentiment analysis in NLTK in python
+
+--  Xiaoxiao: Working on swithing between TF-IDF and high frequency coloumns
+
+--  Rhodri: Plot of 1 Atom over time
+
+--  Rhodri: Draft of initial document
+
+TODO:
+
+--  Mohammed: Ask Ben Mora for initial document specification and deadline
+
+--  Mohammed: Demonstrate working example of chess game
+
+--  Mohammed: Investigagte existing chess engines in java
+
+--  Xiaoxiao: Send link of German lemmatization ot Bob, Mohammed, Tom and Angelika
+
+--  Xiaoxiao: Prepare for demonstration on Monday
+
+--  Xiaoxiao: Try to get TF-IDF verses frequency terms user option working
+
+--  Xiaoxiao: Investigate writing help services- visit English language training services- 3rd floor Margam Building- ask if they can help
+
+--  Xiaoxiao: Send email to 2nd supervision asking for MSc viva on afternoon of 14, 15, Dec. (CC: Bob)
+
+--  Rhodri: Try to verify correctness of Atom pth
+
+--  Rhodri: Show starting positions of Atoms and compass with VMD (lipids) lipids only
+
+The above is only one meeting. 'Bob's Minutes of Meeting Protocol' \cite{Laramee2010} is followed to document the meetings. The URL below contains all the other minutes of meetings.
+\url{http://cs.swansea.ac.uk/~cswang/minutes/}
+\url{http://cos-ugrad.swansea.ac.uk/838940/minutes/}
