--- a/swansea-university-thesis-template-master/Appendix2/appendix2.tex
+++ b/swansea-university-thesis-template-master/Appendix2/appendix2.tex
@@ -1,3 +1,12 @@
-\section{JavaDoc of Project }
+\section{Documentation }
 
-pdf or latex
+The file of Doxygen documentation is presented in the following pages. The URL below contains the full Doxygen docuementation:
+
+\url{http://cs.swansea.ac.uk/~cswang/Xiaoxiao_Othello/Doxygen/}
+
+%\includepdf{TransVisGui}
+
+
+\includepdfmerge{pdf/TransVisGui,1-16}
+
+\includepdf{pdf/Appendix}
