--- a/swansea-university-thesis-template-master/Declaration/declaration.tex
+++ b/swansea-university-thesis-template-master/Declaration/declaration.tex
@@ -1,23 +1,37 @@
 % ******************************* Thesis Declaration ***************************
 \null\vspace{\fill}
-\renewcommand{\abstractname}{\large Declaration}
+\renewcommand{\abstractname}{\large }
 \begin{abstract}
-\vspace{2cm}
+%\vspace{2cm}
 
-I hereby declare that except where specific reference is made to the work of 
-others, the contents of this dissertation are original and have not been 
-submitted in whole or in part for consideration for any other degree or 
-qualification in this, or any other university. This dissertation is my own 
-work and contains nothing which is the outcome of work done in collaboration 
-with others, except as specified in the text and Acknowledgements. This 
-dissertation contains fewer than 40,000 words including appendices, 
-bibliography, footnotes, tables and equations and has fewer than 100 figures.
+\section*{Declaration}
+
+This work has not previously been accepted in substance for any degree and is not being concurrently submitted in candidature for any degree.
+
+December 15, 2016
+
+Signed:
+
+\section*{Statement 1}
+
+This dissertation is the result of my own independent work/investigation, except where otherwise stated. Other sources are acknowledged by giving explicit references. A bibliography is appended.
+
+December 15, 2016
+
+Signed:
+
+\section*{Statement 2}
+
+I hereby give consent for my dissertation, if accepted, to be available for photocopying and for inter-library loan, and for the title and summary to be made available to outside organisations.
+
+December 15, 2016
+
+Signed:
+
 
 \vspace{1cm}
-\begin{flushright}
- MoHo.Khaleqi\\
- September 2015
-\end{flushright}
+
+
 
 \end{abstract}
 
