--- a/swansea-university-thesis-template-master/Title/Title.tex
+++ b/swansea-university-thesis-template-master/Title/Title.tex
@@ -4,10 +4,11 @@
 %----------------------------------------------------------------------------------------
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 \title{
-\begin{Huge}\textbf{Interactive Visualization of Shakespeare’s Othello} \end{Huge} \\% The assignment title
+\begin{Huge}\textbf{INTERACTIVE VISUALISATION OF SHAKESPEARE'S OTHELLO} \end{Huge} \\% The assignment title
 \vspace{70px}
 \includegraphics[width = 65mm]{Figs/SwanseaUniversity}\\[8ex]
 \begin{large} \textsc{\textbf{Xiaoxiao Liu}} \end{large} \\ % Your university, school and/or department name(s)
+\begin{large} \textsc{\textbf{889170@swansea.ac.uk}} \end{large} \\ % Your university, school and/or department name(s)
 \vspace{10px}
 \normalfont \normalsize 
 \begin{normalsize}Department of Computer Science \end{normalsize}\\  % Your university, school and/or department name(s)
