--- a/swansea-university-thesis-template-master/Acknowledgement/acknowledgement.tex
+++ b/swansea-university-thesis-template-master/Acknowledgement/acknowledgement.tex
@@ -4,9 +4,13 @@
 \begin{abstract}
 \vspace{2cm}
 
+\begin{large}
+	
+
+
 Firstly, I would like to express my most gratitude to my supervisor, Dr. Robert Laramee, for his guidance and support. I am really appreciate the patience, motivation, enthusiasm and immense knowledge he provides during this project. Furthermore, I would like to thank him for his efforts in encouraging me to improve my research and programming skills. I would like to thank my family for their support and understanding for my study. I also would like to thank Mohammed Alharbi who assisted me in developing Tf-Idf features for the project. I thank Rhodri Fabbro for his valuable comments in proofreading my thesis. Finally, special thanks go to the Davais for their continued support.
 
-
+\end{large}	
 
 
 \end{abstract}
