--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -5,9 +5,14 @@
 % Swansea University
 %----------------------------------------------------------------------------------------
 
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper, 14pt]{extarticle}
+
 \usepackage[utf8]{inputenc}
 \usepackage[toc,page]{appendix}
+
+
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 
 \usepackage{lastpage} % Required to determine the last page for 
 \usepackage{graphicx} % Required to insert images
@@ -43,44 +48,31 @@
 
 \usepackage[nottoc]{tocbibind} % add list of figure and tables and put them in content 
 
-\usepackage{geometry}
 
-% Margins
-\topmargin=-0.45in
-\evensidemargin=0in
-\oddsidemargin=0in
-\textwidth=6.5in
-\textheight=9.0in
-\headsep=0.25in 
-
-
-
+%\usepackage[margin=0.5in]{geometry}
+\usepackage[top=2cm, bottom=2cm, left=2.5cm, right=2.5cm]{geometry}
 
 \linespread{1.3} % Line spacing
 
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
-\include{Title/Title}
+
 %------------------------------------------------------------------------------------
 % Document begin
 %------------------------------------------------------------------------------------
 \begin{document}
+	
 \pagenumbering{gobble} %stop page number
 %------------------------------------------------------------------------------------
 % Page Title
 %------------------------------------------------------------------------------------
-\begin{titlepage}
-\maketitle
-\vfill
-%\center \date{\normalsize December 2017} % Today's date or a custom date
-\end{titlepage}
+%{\Large}
 % -----------------------------------------------------------------------------------
 
 %\pagenumbering{Roman} 
 %\justify
-\include{Declaration/declaration}
-\include{Abstract/abstract}
+
 \include{Acknowledgement/acknowledgement}
 
 %------------------------------------------------------------------------------------
@@ -96,6 +88,7 @@
 % Document begin
 %------------------------------------------------------------------------------------
 \clearpage
+
 \pagenumbering{arabic}
 \include{Chapter00/introduction}
 \include{Chapter01/BackgroundResearch}
@@ -106,7 +99,6 @@
 \include{Chapter07/Evaluation}
 \include{Chapter08/Conclusion}
 \include{Chapter09/FutureWork}
-
 
 %-----------------------------------------------------------------------------------------
 
@@ -121,4 +113,5 @@
 
 
 \end{appendices}
+
 \end{document}
