--- a/swansea-university-thesis-template-master/Thesis.tex
+++ b/swansea-university-thesis-template-master/Thesis.tex
@@ -85,7 +85,7 @@
 %\listoftables
 %\justify
 %------------------------------------------------------------------------------------
-% Document begin
+% Document begin\textsl{}
 %------------------------------------------------------------------------------------
 \clearpage
 
